<resources>

    <string name="action_jump">跳过</string>
    <string name="action_confirm">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_submit">提交</string>
    <string name="error_network_error">您的网络不可用，请连接网络！</string>


    <string name="app_name">蚂蚁开卡</string>


    <string name="btn_back">返回</string>
    <string name="btn_get_code">获取验证码</string>
    <string name="btn_understand">了解更多</string>


    <string name="hint_mobile">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_code">请输入验证码</string>


    <string name="login_title">用户登录</string>
    <string name="login_btn">登录</string>
    <string name="logout_btn">退出登录</string>
    <string name="login_user_regist">用户注册</string>
    <string name="login_forgot_password">忘记密码？</string>

    <string name="changepass_title">更改密码</string>
    <string name="changepass_hint_pass">请输入新密码</string>
    <string name="changepass_hint_pass_confirm">请确认新密码</string>
    <string name="changepass_btn">确认修改</string>


    <string name="findpass_title">找回密码</string>
    <string name="findpass_register_mobile">请输入您注册时使用的手机号</string>
    <string name="findpass_btn">找回密码</string>


    <string name="my_income">总收益（元）</string>
    <string name="my_total">总资产（元）</string>
    <string name="my_raise">募集中（元）</string>
    <string name="my_manage">理财中（元）</string>
    <string name="my_balance">可用余额（元）</string>
    <string name="my_recharge">充值</string>
    <string name="my_withdraw">提现</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_ant_salary">蚂蚁工资</string>
    <string name="my_ant_share">我的分享</string>
    <string name="my_detail_account">账目明细</string>
    <string name="my_manage_records">理财记录</string>
    <string name="my_financial_records">资金记录</string>

    <string name="record_1">充值金额(元)</string>
    <string name="record_2">提现金额(元)</string>
    <string name="record_3">理财收入(元)</string>
    <string name="record_tab_1">充值</string>
    <string name="record_tab_2">提现</string>
    <string name="record_tab_3">投资</string>

    <!-- 理财记录 -->
    <string name="manage_tab_1">募集中</string>
    <string name="manage_tab_2">理财中</string>
    <string name="manage_tab_3">已还款</string>
    <string name="record_title_3">已还款（元）</string>


    <!-- salary -->
    <string name="my_antsalary">我的蚂蚁工资</string>
    <string name="salary_">工资余额(元)</string>
    <string name="salary_total">累计获得工资(元)</string>
    <string name="salary_alredy_get">已提现</string>
    <string name="salary_coupon_">兑换优惠券(元)</string>
    <string name="salary_coupon">兑换优惠券</string>
    <string name="salary_get">工资提现</string>

    <string name="coupon_title">优惠券</string>
    <string name="coupon_t_1">未使用(元)</string>
    <string name="coupon_t_2">已使用(元)</string>
    <string name="coupon_t_3">已过期(元)</string>

    <!-- 工资提现 -->
    <string name="tx_1">请输入提现金额（不能少于100元）</string>
    <string name="tx_2">请输入真实姓名</string>
    <string name="tx_3">请输入银行卡号</string>
    <string name="tx_4">请输入银行开户行</string>


    <string name="recharge_title">充值</string>
    <string name="recharge_money">充值金额(元)</string>
    <string name="recharge_hint_money">请输入充值金额</string>
    <string name="recharge_zj">中金帐号</string>
    <string name="recharge_confirm">确认充值</string>

    <string name="withdraw_title">提现</string>
    <string name="withdraw_money">提现金额(元)</string>
    <string name="withdraw_money_money">请输入充值金额</string>
    <string name="withdraw_hint_money">可用余额0元</string>
    <string name="withdraw_confirm">确认提现</string>

    <string name="tab_1">我要理财</string>
    <string name="tab_2">我的账户</string>
    <string name="tab_3">我有票据</string>
    <string name="tab_4">精彩活动</string>


    <string name="regist_title">用户注册</string>
    <string name="regist_btn">注册</string>
    <string name="regist_repeat_pass">请重复密码</string>
    <string name="regist_hint_invitationcode">请输入邀请码（没有可不填）</string>
    <string name="regist_protocal">查看用户协议</string>
    <string name="regist_commitment">蚂蚁开卡不会在任何地方泄露您的号码</string>

    <!-- 我要理财 -->
    <string name="a_1">新手标</string>
    <string name="a_2">优选标</string>
    <string name="a_3">VIP精选</string>
    <string name="a_title">理财产品</string>

    <string name="b_title">标的详情</string>
    <string name="b_1">预期年化收益率</string>
    <string name="b_2">期限</string>
    <string name="b_3">起投金额1元</string>
    <string name="b_4">一次性还本付息</string>
    <string name="btn_buy">立即购买</string>

    <string name="c_title">标的购买</string>
    <string name="bugy_money">购买金额（元）</string>
    <string name="pre_money">预计收益</string>
    <string name="pre_extra_money">会员增益</string>

    <string name="finance_detail_message1">投资信息</string>
    <string name="finance_detail_message2">汇票信息</string>
    <string name="finance_detail_message3">投标记录</string>
    <string name="finance_detail_message32">申请记录</string>

    <string name="finance_detail_date1">起息日期</string>
    <string name="finance_detail_date2">到期日期</string>
    <string name="finance_detail_date3">还款日期</string>


    <string name="finance_detail_sgqk">申购情况</string>
    <string name="finance_record_p">投资人</string>
    <string name="finance_record_m">投资金额</string>
    <string name="finance_record_d">投资时间</string>

    <!-- vip -->
    <string name="vip_title">VIP标的详情</string>
    <string name="vip_special">VIP独享</string>
    <string name="vip_year_income">年化收益（%）</string>
    <string name="vip_total">总额</string>
    <string name="vip_btn">我要申请</string>
    <string name="vip_btn_">立即申请</string>
    <string name="vip_btn_already">已申请</string>
    <string name="vip_pre_money">预计收益</string>


    <!-- 理财师 -->
    <string name="planner_select_hint_search">请输入理财师姓名或者手机号</string>


    <!-- 我有票据 -->
    <string name="tab_03_hint_name">持票人姓名</string>
    <string name="tab_03_hint_phone">联系电话</string>
    <string name="tab_03_hint_message">点击上传汇票信息</string>


    <!-- 我的账户 -->
    <string name="account_title">账户设置</string>
    <string name="account_pay">支付账户签约</string>
    <string name="account_pay_1">已签</string>
    <string name="account_list">邀请人员列表</string>
    <string name="account_my_code">我的邀请码：</string>


    <!-- 我推荐的人 -->
    <string name="member_title">我推荐的人</string>
    <string name="member_count">邀请人数：</string>
    <string name="member_salary_tatal">工资总额：</string>
    <string name="member_name">姓名</string>
    <string name="member_salary_item">产生工资</string>
    <string name="member_date">注册时间</string>


    <!--  我的消息  -->
    <string name="message_title">我的消息</string>

    <string name="message_detail_title">消息详情</string>

    <!-- setting -->
    <string name="verified_title">实名认证</string>
    <string name="verified_hint_name">请输入您的真实姓名</string>
    <string name="verified_hint_no">请输入您的身份证号</string>
    <string name="verified_btn">认证</string>
    <string name="verified_get_around">先去逛逛再说</string>

    <string name="verified_success_title">实名认证信息</string>


    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以加载</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载</string>

    <string name="recommend_title">推荐号码</string>

    <string name="recommend_tab_string">首页</string>
    <string name="liang_tab_string">选号</string>
    <string name="recharge_tab_string">充值</string>
    <string name="perconcenter_tab_string">个人中心</string>

    <string name="recommend_radio_1">靓号选购</string>
    <string name="recommend_radio_2">充值优惠</string>
    <string name="recommend_radio_3">个人中心</string>

    <string name="liang_radio_1">综合</string>
    <string name="liang_radio_2">销量</string>
    <string name="liang_radio_3">价格</string>
    <string name="liang_radio_4">全国</string>
    <string name="liang_radio_5">地方</string>

    <string name="liang_search">请输入您要购买的手机号</string>

    <string name="person_name">用户姓名</string>
    <string name="person_tel">手机号码</string>
    <string name="person_saler">推荐人</string>
    <string name="person_total_money">销售金额</string>
    <string name="person_my_orders">我的订单</string>
    <string name="person_my_favors">我的收藏</string>

    <string name="orders_title">订单列表</string>
    <string name="title_activity_screen_order">ScreenOrderActivity</string>
    <string name="fromdate_text_screen_order">起始日期</string>
    <string name="todate_text_screen_order">结束日期</string>
    <string name="tel_text_screen_order">电话号码</string>
    <string name="comsumer_text_screen_order">机主姓名</string>
    <string name="order_text_screen_order">订单号码</string>
    <string name="state_text_screen_order">订单状态</string>
    <string name="search_btn_screen_order">查询</string>
    <string name="detail_description_order">苏宁相关人士透露，这18种方案只是向苏宁会员征集而成的设计猜想，最终的170号码套餐方案仍在商讨制定中，预计将在二季度正式上线。苏宁相关人士透露，这18种方案只是向苏宁会员征集而成的设计猜想，最终的170号码套餐方案仍在商讨制定中，预计将在二季度正式上线。"</string>
    <string name="fillin_title">订单支付</string>
    <string name="write_cart_title">写卡</string>
    <string name="wait_upload_zheng">身份证正面</string>
    <string name="wait_upload_fan">身份证反面</string>
    <string name="wait_upload_shou">手持身份证</string>
    <string name="photo_btn_title">相册</string>
    <string name="camera_btn_title">拍照</string>
    <string name="upload_photo_failed">照片上传失败</string>

    <string name="write_cart_alert">您確定已经写卡成功了吗？</string>
    <string name="recharge_alert">您確定充值吗？</string>

    <string name="logoff_alert">您確定退出吗？</string>
    <string name="favors_title">我的收藏</string>

    <string name="exit_alert">您確定关闭程序吗？</string>


    <string name="regist_delegate_title">代理商信息</string>
    <string name="person_manage_title">个人信息</string>
    <string name="action_settings">Settings</string>

    <string name="whchat_txt">微信支付</string>
    <string name="alipay_txt">支付宝支付</string>
    <string name="lkl_txt">拉卡拉支付</string>
    <string name="payment_txt">金额（元）</string>
    <string name="userid_txt">用户号</string>
    <string name="default_amount">￥ 0.01</string>
    <string name="default_userid">100</string>
    <string name="bt_ok">确认支付</string>
    <string name="time_expire_txt">过期时间</string>
    <string name="default_time_expire">3600</string>


    <string name="text_name">姓名</string>
    <string name="text_idcard">身份证号码</string>
    <string name="btn_start_liveness">开始活体检测</string>

    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>

</resources>
